# mlir-iree-study

./: .gitignore  README.md
docs/: presentation_log.md  researchers.md  seminar.md
personal/jihawn/toy/: CMakeLists.txt  test.toy
personal/jihawn/toy/Ch4/include/toy/: Ops.td
personal/jihawn/toy/Ch4/mlir/: Dialect.cpp  MLIRGen.cpp  ShapeInferencePass.cpp
personal/jihawn/toy/Ch5/mlir/: LowerToAffineLoops.cpp
personal/kwanghoon/Toy/: Ch-1_kr.md  Ch-2_kr.md  Ch-3_kr.md  Ch-4_kr.md  Ch-5_kr.md  Ch-6_kr.md  Ch-7_kr.md  _index_kr.md
personal/youngjin/MLIR-Toy/: CMakeLists.txt  README.md  dummy_main.cpp  test.toy  toyc.cpp
personal/youngjin/MLIR-Toy/.cache/clangd/index/: AST.cpp.628D5791C5C50EE6.idx  AST.h.5F3563D84EB113CA.idx  Dialect.cpp.5CD6E231E08E697A.idx  Dialect.cpp.inc.358CCF8F6551011C.idx  Dialect.h.04675B95B943547A.idx  Dialect.h.inc.DE11A97364617BAC.idx  Lexer.h.69521B57065399B2.idx  MLIRGen.cpp.0B4EF638B7E7F269.idx  MLIRGen.h.9763A54DE9DE4D0E.idx  Ops.cpp.BEE2FCBB6E3AD4C0.idx  Ops.cpp.inc.5BCC1C07F0BD55F3.idx  Ops.h.inc.A9BE20484DF83B92.idx  Parser.h.1B4D0342C985B657.idx  Passes.h.979CEACEC09D50D4.idx  ShapeInferenceInterface.h.B947E9416EC65215.idx  ShapeInferencePass.cpp.354713A3704F618E.idx  ToyCombine.cpp.4DF1167EE8438308.idx  dummy_main.cpp.8551C35FD38F5756.idx  toyc.cpp.31D8C6E425FD59CB.idx
personal/youngjin/MLIR-Toy/build_cmake/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
personal/youngjin/MLIR-Toy/docs/: C++ 문법과 디자인 패턴.md  Ch1.md  Ch2.md  Ch4-inliner.md  Ch4-shape_inference.md  Ch4.md  Ch5.md  Ch6.md  Ch7.md  MLIR, LLVM의 디자인패턴.md  ch6-llvm_output.txt  ch6-mlir-llvm_output.txt  컴파일러를 위한 개념들.md
personal/youngjin/MLIR-Toy/docs/draft/: Ch1_draft.md  Ch5_draft.md
personal/youngjin/MLIR-Toy/include/toy/: AST.h  Dialect.h  Dialect.h.inc  Lexer.h  Ops.cpp.inc  Ops.h.inc  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td  ToyCombine.td
personal/youngjin/MLIR-Toy/lib/toy/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  Ops.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td
personal/youngjin/MLIR-Toy/parser/: AST.cpp
